# sandbox

./: .cspell.json  .devskim.json  .gitignore  .gitleaksignore  .jscpd.json  .lycheeignore  .mega-linter.yml  .prettierignore  .trufflehogignore  .v8rrc.yml  .yamllint.yml  bucket.tf  docker-compose.yaml  tsconfig.json  zizmor.yaml
.cursor/rules/: megalinter-verify.mdc
.docker-compose/fluent-bit/: fluent-bit.yaml
.docker-compose/grafana/: dashboards.yaml  datasource.yaml
.docker-compose/loki/: loki-config.yaml
.docker-compose/prometheus/: prometheus.yml
.docker-compose/snapshot-cron/: Dockerfile  script.sh  snapshot.sh
.docker-compose/web-app-cron/: script.sh
.github/scripts/: get-paths.sh  output-changes.sh
.github/workflows/: build-image.yaml  main.yaml  main.yml  terraform.yaml  terraform.yml  test-lambda.yaml
apps/web-app/: index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  vite.config.ts
gitops/bootstrap/: apps-boostrap.yaml  infra-bootstrap.yaml  root-app.yaml  root-app.yml
helm-libraries/common-library/: Chart.yaml
lambda/rotate-cloudflare-token/: pyproject.toml  rotate_cloudflare_token.py
lambda/rotate-cloudflare-token/tests/: test_rotate_cloudflare_token.py
terraform/: .tflint.hcl  bucket.tf  db.tf  dev.env  ecr.tf  iam.tf  k8s.tf  locals.tf  main.tf  providers.tf  variables.tf  vpc.tf
terraform/cloudflare/: providers.tf  secret.tf
terraform/common-files/: .tflint.hcl  globals.tf  providers.tf  variables.tf
terraform/infra/: bucket.tf  certs.tf  cloudflare.tf  db.tf  dev.env  ecr.tf  eks.tf  iam.tf  lb.tf  (+7 more)
(+76 files in other folders)
